k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: apimatic-dx-portal-demo
  name: apimatic-dx-portal-demo
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 9080
      targetPort: 9080
  selector:
    app: apimatic-dx-portal-demo
