k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: apimatic-dx-portal-demo
  name: apimatic-dx-portal-demo
spec:
  port:
    targetPort: 9080-tcp
  to:
    kind: Service
    name: apimatic-dx-portal-demo
    weight: 100
